--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
@@ -19,6 +19,7 @@
     "twilio": "^4.19.0",
     "twilio-video": "^2.28.1",
     "uuid": "^9.0.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0"
