--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.5.1",
     "core-js": "^3.29.0",
     "firebase": "^10.4.0",
